# 2026-NVIDIA

./: .gitignore  EVALUATION.md  benchmark.py  benchmark_optimizers.py  driver.py  main.py  pce.py  plot_benchmark.py  pyproject.toml  real_benchmark.py  temp.py  test.py
src/: __init__.py  circuit.py  constants.py  paulis.py  solver.py
team-submissions/: 01_quantum_enhanced_optimization_LABS.ipynb  test.py
team-submissions/code/: README_benchmark.md  README_benchmark_optimizers.md  README_cpu_benchmark.md  README_main.md  README_plot_benchmark.md  README_real_benchmark.md  benchmark.py  benchmark_optimizers.py  cpu_benchmark.py  plot_benchmark.py
team-submissions/code/src_cpu/: README.md  __init__.py  circuit.py  constants.py  paulis.py  solver.py
team-submissions/code/src_gpu/: README.md  constants.py  energy.py  search.py
tutorial_notebook/: 01_quantum_enhanced_optimization_LABS.ipynb  data82.csv  data_analysis.ipynb  labs_mts_results.csv  labs_mts_results2.csv  merged_results.csv  mts.py  tests.py
tutorial_notebook/auxiliary_files/: labs_utils.py
