[project]
name = "2026-nvidia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cudaq>=0.13.0",
    "marimo>=0.19.7",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyzmq>=27.1.0",
    "ruff>=0.14.14",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.2",
]
